removing link on the wait list

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                  <p>Click on the link to join our waitlist</p>
                               </div>
                               <div class="banner-button">
-                                 <a href="contact.html" class="button-round">Waitlist</a>
+                                 <a href="#" class="button-round">Waitlist</a>
                                  <a href="#" class="outline-round outline-round-white">Learn More</a>
                               </div>
                            </div>
