removing links on the reviews

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                         </div>
                      </div>
                      <div class="list-more-btn text-center">
-                        <a href="testimonial.html" class="button-round">VIEW ALL REVIEWS</a>
+                        <a href="#" class="button-round">VIEW ALL REVIEWS</a>
                      </div>
                   </div>
                </div>
