--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
                            </div>
                            <div class="process-content">
                               <h4>
-                                 <a href="single-page.html">Slash for shoppers</a>
+                                 <a href="#">Slash for shoppers</a>
                               </h4>
                               <p>We offer new and interactive features to make your experience as enjoyable as possible while giving the best deals.
                                  We're bringing the social experience of shopping, online one feature at a time</p>
                            </div>
                            <div class="progress-footer">
-                              <a href="single-page.html" class="outline-round">Read More</a>
+                              <a href="#" class="outline-round">Read More</a>
                            </div>
                         </article>
                      </div>
@@ -253,12 +253,12 @@
                            </div>
                            <div class="process-content">
                               <h4>
-                                 <a href="single-page.html">Slash for logistics</a>
+                                 <a href="#">Slash for logistics</a>
                               </h4>
                               <p>Our services are designed to help our customers succeed in today's global marketplace. We help our clients build, manage, and improve their business processes to support the delivery of their products and services.</p>
                            </div>
                            <div class="progress-footer">
-                              <a href="single-page.html" class="outline-round">Read More</a>
+                              <a href="#" class="outline-round">Read More</a>
                            </div>
                         </article>
                      </div>
@@ -270,12 +270,12 @@
                            </div>
                            <div class="process-content">
                               <h4>
-                                 <a href="single-page.html">Slash for businesses</a>
+                                 <a href="#">Slash for businesses</a>
                               </h4>
                               <p>Slash Bussiness believes that the best way to do this is by providing a platform that allows you to focus on what you love: building your products, creating engaging content, and growing your business.</p>
                            </div>
                            <div class="progress-footer">
-                              <a href="single-page.html" class="outline-round">Read More</a>
+                              <a href="#" class="outline-round">Read More</a>
                            </div>
                         </article>
                      </div>
