--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
       <!-- favicon -->
-      <link rel="icon" type="image/png" href="assets/images/favicon.png">
+      <link rel="icon" type="image/png" href="assets/favicon_io slash/favicon-32x32.png">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css" media="all">
       <!-- Fonts Awesome CSS -->
@@ -26,7 +26,7 @@
       <!-- slick slider css -->
       <link rel="stylesheet" type="text/css" href="assets/vendors/slick/slick.css">
       <link rel="stylesheet" type="text/css" href="assets/vendors/slick/slick-theme.css">
-      <!-- google fonts -->
+      <!-- google fonts -->  
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&amp;display=swap" rel="stylesheet">
       <!-- Custom CSS -->
       <link rel="stylesheet" type="text/css" href="style.css">
@@ -637,8 +637,8 @@
                                     We leverage on the power of the crowd to curate and distribute content and information in an effortless and authentic way.
                                     Be the first to hear about the new ways we are improving social commerce.</p>
                                  <form method="get" class="subscribe-form">
-                                    <input type="email" name="email" placeholder="Enter your email*">
-                                    <button type="submit" class="button-round">Subscribe</button>
+                                 <!---- <input type="email" name="email" placeholder="Enter your email*"> -->
+                                 <a href="https://forms.gle/KcTQ15tsovDETkNr9" target="_blank">  <button  class="button-round">Waitlist</button> </a>  
                                  </form>
                               </div>
                            </div>
@@ -722,13 +722,13 @@
                   <div class="app-slider-inner">
                      <div class="app-slider">
                         <div class="app-slider-item">
-                           <img src="assets/sceen 1.png" alt="">
+                           <img src="assets/deal 1.png" alt="">
                         </div>
                         <div class="app-slider-item">
-                           <img src="assets/Screen 2.png" alt="">
+                           <img src="assets/deal 2.png" alt="">
                         </div>
                         <div class="app-slider-item">
-                           <img src="assets/Screen 3.png" alt="">
+                           <img src="assets/deal 3.png" alt="">
                         </div>
                         <div class="app-slider-item">
                            <img src="assets/screen 4.png" alt="">
@@ -816,7 +816,7 @@
                         <div class="col-lg-3 col-md-6">
                            <article class="team-item">
                               <figure class="team-img">
-                                 <img src="assets/images/Mountain.jpg" alt="">
+                                 <img src="assets/profile 2.jpeg" alt="">
                                  <div class="social-links">
                                     <ul>
                                        <li>
@@ -876,21 +876,21 @@
                         <div class="col-lg-3 col-md-6">
                            <article class="team-item">
                               <figure class="team-img">
-                                 <img src="assets/images/tech guy.jpg" alt="">
+                                 <img src="assets/profile 1.jpeg" alt="">
                                  <div class="social-links">
                                     <ul>
                                        <li>
-                                          <a href="#" target="_blank">
-                                             <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                                          <a href="https://www.linkedin.com/in/ayodejiajuwon" target="_blank">
+                                             <i class="fab fa-linkedin" aria-hidden="true"></i>
                                           </a>
                                        </li>
                                        <li>
-                                          <a href="#" target="_blank">
+                                          <a href="https://twitter.com/ajuwon_ayodeji?t=yY-V3RFQ0avat3T6gIUwog&s=09" target="_blank">
                                              <i class="fab fa-twitter" aria-hidden="true"></i>
                                           </a>
                                        </li>
                                        <li>
-                                          <a href="#" target="_blank">
+                                          <a href="https://instagram.com/ajuwon_ay?igshid=YmMyMTA2M2Y=" target="_blank">
                                              <i class="fab fa-instagram" aria-hidden="true"></i>
                                           </a>
                                        </li>
