--- a/index.html
+++ b/index.html
@@ -722,13 +722,13 @@
                   <div class="app-slider-inner">
                      <div class="app-slider">
                         <div class="app-slider-item">
-                           <img src="assets/screen 1.png" alt="">
+                           <img src="assets/sceen 1.png" alt="">
                         </div>
                         <div class="app-slider-item">
-                           <img src="assets/screen 2.png" alt="">
+                           <img src="assets/Screen 2.png" alt="">
                         </div>
                         <div class="app-slider-item">
-                           <img src="assets/screen 3.pngg" alt="">
+                           <img src="assets/Screen 3.png" alt="">
                         </div>
                         <div class="app-slider-item">
                            <img src="assets/screen 4.png" alt="">
