--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                         </div>
                      </div>
                      <div class="col-md-6">
-                        <div class="copy-right"> <p>&copy; 2022 <strong> Princess Luxury </strong> designed by <a href="https://davidfrank96.github.io/portfolio/" target="_blank"><strong>Frankenstein services</strong></a></p></div>
+                        <div class="copy-right"> <p>&copy; 2022 designed by <a href="https://davidfrank96.github.io/portfolio/" target="_blank"><strong>Frankenstein services</strong></a></p></div>
                      </div>
                   </div>
                </div>
